@startuml

class Duck {
    +quack(): void
    +swim(): void
}

class ElectronicDuck {
    -_on: boolean
    +quack(): void
    +swim(): void
    +turnOn(): void
    +turnOff(): void
}

class Pool {
    +run(): void
    +quack(ducks: Duck[]): void
    +swim(ducks: Duck[]): void
}

Duck <|-- ElectronicDuck
Pool o-- Duck

@enduml
